# SekuraSDK

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  sdk_mainwindow.cpp  sdk_mainwindow.h  sdk_mainwindow.ui  systemcommandform.cpp  systemcommandform.h  systemcommandform.ui  wcrm.info
crm/: crm_mainwindow.cpp  crm_mainwindow.h  crm_mainwindow.ui  main.cpp
images/: resource.rc  sekura.icns
